# oss

./: .gitignore  .rustfmt.toml  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  buf.gen.yaml  go.mod  go.sum  lefthook.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  skills-lock.json  turbo.json
.codex/: config.toml
apps/: AGENTS.md
apps/devhud/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
apps/devhud/src-tauri/capabilities/: main.json  probe.json
apps/devhud/src-tauri/src/: lib.rs  macos_gate.rs  main.rs
apps/dexdex/src-tauri/: Cargo.toml  tauri.conf.json
apps/dexdex/src-tauri/capabilities/: default.json
apps/dexdex/src-tauri/src/: lib.rs  main.rs
cli/: AGENTS.md
cmds/: AGENTS.md
crates/: AGENTS.md
crates/binpm/: Cargo.toml  README.md  build.rs
crates/binpm/src/: assets.rs  cli.rs  commands.rs  contract.rs  error.rs  lib.rs  logging.rs  main.rs  release.rs  storage.rs
crates/binpm/tests/: cli.rs
crates/cargo-mono/: Cargo.toml  README.md
crates/cargo-mono/src/: cli.rs  errors.rs  git.rs  lib.rs  logging.rs  main.rs  types.rs  versioning.rs  workspace.rs
crates/cargo-mono/src/commands/: bump.rs  changed.rs  list.rs  mod.rs  publish.rs  targeting.rs
crates/cargo-mono/tests/: cli.rs
crates/nodeup/: Cargo.toml  README.md
crates/nodeup/packaging/: nfpm.yaml
crates/nodeup/packaging/homebrew/: nodeup.rb.tmpl
crates/nodeup/src/: cli.rs  command_diagnostics.rs  command_plan.rs  dispatch.rs  errors.rs  installer.rs  lib.rs  logging.rs  main.rs  output_style.rs  overrides.rs  paths.rs  process.rs  release_index.rs  resolver.rs  selectors.rs  store.rs  types.rs
crates/nodeup/src/commands/: completions.rs  default_cmd.rs  mod.rs  override_cmd.rs  run_cmd.rs  self_cmd.rs  shim_cmd.rs  show.rs  skeleton.rs  toolchain.rs  update_check.rs  which_cmd.rs
crates/nodeup/tests/: cli.rs
crates/rustia/: Cargo.toml  README.md
crates/rustia-agentica/: Cargo.toml  README.md
crates/rustia-agentica/src/: config.rs  controller.rs  error.rs  lib.rs  mcp.rs  outcome.rs
crates/rustia-agentica/tests/: micro_agentica.rs
crates/rustia-llm/: Cargo.toml  README.md
crates/rustia-llm/src/: lib.rs
crates/rustia-llm/tests/: tool_adapter.rs
crates/rustia-macros/: Cargo.toml  README.md
crates/rustia-macros/src/: lib.rs
crates/rustia/src/: lenient_json.rs  lib.rs  validate.rs
crates/rustia/tests/: llm_data_runtime.rs  llm_json_parse_parity.rs
crates/rustia/tests/ui/: llm_data_invalid_tag_alias.rs  llm_data_invalid_tag_alias.stderr  llm_data_invalid_tag_target.rs  llm_data_invalid_tag_target.stderr  llm_data_non_string_map_key.rs  llm_data_non_string_map_key.stderr  llm_data_union.rs
crates/serde-feather/: Cargo.toml
crates/serde-feather-macros/: Cargo.toml
crates/serde-feather-macros/src/: lib.rs
crates/serde-feather/src/: lib.rs
crates/serde-feather/tests/: derive_compile_fail.rs  derive_runtime.rs
crates/serde-feather/tests/ui/: container_duplicate_rename.rs  container_duplicate_rename.stderr  container_unsupported_attribute.rs  container_unsupported_attribute.stderr  duplicate_wire_name.rs  duplicate_wire_name.stderr  enum_duplicate_variant_name.rs  enum_duplicate_variant_name.stderr  enum_generic.rs  enum_generic.stderr  enum_type.rs  enum_type.stderr  enum_variant_attribute.rs  enum_variant_attribute.stderr  enum_variant_field_attribute.rs  enum_variant_field_attribute.stderr  field_default_with_value.rs  field_default_with_value.stderr  field_duplicate_default.rs  field_duplicate_default.stderr  field_duplicate_rename.rs  field_duplicate_rename.stderr  field_duplicate_skip_deserializing.rs  field_duplicate_skip_deserializing.stderr  field_duplicate_skip_serializing.rs  field_duplicate_skip_serializing.stderr  field_skip_with_value.rs  field_skip_with_value.stderr  generic_struct.rs  generic_struct.stderr  skip_attribute_order.rs  skip_attribute_order.stderr  skip_directional_conflict.rs  skip_directional_conflict.stderr  tuple_default_prefix.rs  tuple_default_prefix.stderr  tuple_struct.rs  tuple_struct.stderr  union_type.rs  union_type.stderr  (+6 more)
crates/serde-lite-derive/: Cargo.toml
crates/serde-lite-derive/src/: lib.rs
crates/typia/: Cargo.toml  README.md
crates/typia-macros/: Cargo.toml  README.md
crates/typia-macros/src/: lib.rs
crates/typia/src/: lenient_json.rs  lib.rs  validate.rs
crates/typia/tests/: derive_compile_fail.rs  llm_data_runtime.rs  llm_json_parse_parity.rs
crates/typia/tests/ui/: llm_data_invalid_tag_alias.rs  llm_data_invalid_tag_alias.stderr  llm_data_invalid_tag_target.rs  llm_data_non_string_map_key.rs  llm_data_non_string_map_key.stderr  llm_data_union.rs  llm_data_union.stderr
crates/with-watch/: Cargo.toml  README.md
crates/with-watch/src/: analysis.rs  cli.rs  error.rs  lib.rs  logging.rs  main.rs  parser.rs  runner.rs  snapshot.rs  watch.rs
crates/with-watch/tests/: cli.rs
docs/: README.md  apps-binpm-docs-foundation.md  apps-delidev-app-foundation.md  apps-devhud-foundation.md  apps-devkit-commit-tracker-web-app-foundation.md  apps-devkit-foundation.md  apps-devkit-remote-file-picker-foundation.md  apps-dexdex-desktop-app-foundation.md  apps-dexdex-notification-contract.md  apps-dexdex-ui-contract.md  apps-dexdex-user-guide-contract.md  apps-dexdex-workspace-connectivity-contract.md  apps-mpapp-foundation.md  apps-nodeup-docs-foundation.md  apps-public-docs-foundation.md  apps-thenv-web-console-foundation.md  cmds-derun-foundation.md  cmds-devkit-commit-tracker-collector-foundation.md  cmds-devmon-foundation.md  cmds-thenv-cli-foundation.md  cmds-ttl-foundation.md  cmds-ttl-language-contract.md  crates-binpm-foundation.md  crates-cargo-mono-foundation.md  crates-nodeup-foundation.md  crates-rustia-agentica-foundation.md  crates-rustia-core-foundation.md  crates-rustia-llm-foundation.md  crates-rustia-macros-foundation.md  crates-serde-feather-core-foundation.md  crates-serde-feather-macros-foundation.md  crates-typia-core-foundation.md  crates-typia-llm-foundation.md  crates-typia-macros-foundation.md  crates-with-watch-foundation.md  domain-template.md  monorepo.md  (+40 more)
(+1002 files in other folders)
