[package]
name = "binpm"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Node-free binary package manager for release assets"
readme = "README.md"
repository = "https://github.com/delinoio/oss"
publish = false

[dependencies]
chrono = { version = "0.4.42", default-features = false, features = ["clock", "std"] }
clap = { version = "4.5.32", features = ["derive"] }
flate2 = "1.1.5"
reqwest = { version = "0.12.14", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0.219", features = ["derive"] }
sha2 = "0.10.8"
swc_malloc = "1.2.5"
tar = "0.4.44"
thiserror = "2.0.12"
toml = "0.8.20"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["fmt", "env-filter"] }
xz2 = "0.1.7"
zip = { version = "2.4.2", default-features = false, features = ["deflate"] }
zstd = "0.13.3"

[dev-dependencies]
assert_cmd = "2.0.16"
predicates = "3.1.3"
serde_json = "1.0.140"
tempfile = "3.18.0"
