[package]
name = "cargo-mono"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Cargo subcommand for Rust monorepo management"

[dependencies]
cargo_metadata = "0.19.2"
clap = { version = "4.5.32", features = ["derive"] }
semver = { version = "1.0.26", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
toml_edit = "0.22.24"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["fmt", "env-filter"] }

[dev-dependencies]
assert_cmd = "2.0.16"
predicates = "3.1.3"
tempfile = "3.18.0"
