[package]
name = "cargo-mono"
version = "0.6.6"
edition = "2021"
license = "MIT"
description = "Cargo subcommand for Rust monorepo management"
repository = "https://github.com/delinoio/oss"

[package.metadata.binstall]
disabled-strategies = ["quick-install", "compile"]

[package.metadata.binstall.overrides.x86_64-unknown-linux-gnu]
pkg-url = "{ repo }/releases/download/cargo-mono@v{ version }/cargo-mono-linux-amd64.tar.gz"
pkg-fmt = "tgz"
bin-dir = "cargo-mono"

[package.metadata.binstall.overrides.aarch64-unknown-linux-gnu]
pkg-url = "{ repo }/releases/download/cargo-mono@v{ version }/cargo-mono-linux-arm64.tar.gz"
pkg-fmt = "tgz"
bin-dir = "cargo-mono"

[package.metadata.binstall.overrides.x86_64-apple-darwin]
pkg-url = "{ repo }/releases/download/cargo-mono@v{ version }/cargo-mono-darwin-amd64.tar.gz"
pkg-fmt = "tgz"
bin-dir = "cargo-mono"

[package.metadata.binstall.overrides.aarch64-apple-darwin]
pkg-url = "{ repo }/releases/download/cargo-mono@v{ version }/cargo-mono-darwin-arm64.tar.gz"
pkg-fmt = "tgz"
bin-dir = "cargo-mono"

[package.metadata.binstall.overrides.x86_64-pc-windows-msvc]
pkg-url = "{ repo }/releases/download/cargo-mono@v{ version }/cargo-mono-windows-amd64.zip"
pkg-fmt = "zip"
bin-dir = "cargo-mono.exe"

[package.metadata.binstall.overrides.aarch64-pc-windows-msvc]
pkg-url = "{ repo }/releases/download/cargo-mono@v{ version }/cargo-mono-windows-arm64.zip"
pkg-fmt = "zip"
bin-dir = "cargo-mono.exe"

[dependencies]
cargo_metadata = "0.19.2"
clap = { version = "4.5.32", features = ["derive"] }
globset = "0.4.15"
semver = { version = "1.0.26", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
reqwest = { version = "0.12.14", default-features = false, features = ["blocking", "rustls-tls"] }
swc_malloc = "1.2.5"
thiserror = "2.0.12"
toml_edit = "0.22.24"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["fmt", "env-filter"] }

[dev-dependencies]
assert_cmd = "2.0.16"
predicates = "3.1.3"
tempfile = "3.18.0"
