[package]
name = "nodeup"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Rustup-like Node.js version manager"

[dependencies]
clap = { version = "4.5.32", features = ["derive"] }
reqwest = { version = "0.12.14", default-features = false, features = ["blocking", "json", "rustls-tls"] }
semver = { version = "1.0.26", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sha2 = "0.10.8"
tar = "0.4.44"
tempfile = "3.18.0"
thiserror = "2.0.12"
toml = "0.8.20"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["fmt", "env-filter"] }
xz2 = "0.1.7"

[dev-dependencies]
assert_cmd = "2.0.16"
httpmock = "0.8.3"
predicates = "3.1.3"
serial_test = "3.2.0"
