[package]
name = "nodeup"
version = "0.1.12"
edition = "2021"
license = "MIT"
description = "Rustup-like Node.js version manager"
readme = "README.md"
repository = "https://github.com/delinoio/oss"

[package.metadata.binstall]
disabled-strategies = ["quick-install", "compile"]

[package.metadata.binstall.overrides.x86_64-unknown-linux-gnu]
pkg-url = "{ repo }/releases/download/nodeup@v{ version }/nodeup-linux-amd64.tar.gz"
pkg-fmt = "tgz"
bin-dir = "nodeup"

[package.metadata.binstall.overrides.aarch64-unknown-linux-gnu]
pkg-url = "{ repo }/releases/download/nodeup@v{ version }/nodeup-linux-arm64.tar.gz"
pkg-fmt = "tgz"
bin-dir = "nodeup"

[package.metadata.binstall.overrides.x86_64-apple-darwin]
pkg-url = "{ repo }/releases/download/nodeup@v{ version }/nodeup-darwin-amd64.tar.gz"
pkg-fmt = "tgz"
bin-dir = "nodeup"

[package.metadata.binstall.overrides.aarch64-apple-darwin]
pkg-url = "{ repo }/releases/download/nodeup@v{ version }/nodeup-darwin-arm64.tar.gz"
pkg-fmt = "tgz"
bin-dir = "nodeup"

[package.metadata.binstall.overrides.x86_64-pc-windows-msvc]
pkg-url = "{ repo }/releases/download/nodeup@v{ version }/nodeup-windows-amd64.zip"
pkg-fmt = "zip"
bin-dir = "nodeup-windows-amd64.exe"

[package.metadata.binstall.overrides.aarch64-pc-windows-msvc]
pkg-url = "{ repo }/releases/download/nodeup@v{ version }/nodeup-windows-arm64.zip"
pkg-fmt = "zip"
bin-dir = "nodeup-windows-arm64.exe"

[dependencies]
clap = { version = "4.5.32", features = ["derive"] }
clap_complete = "4.5.47"
reqwest = { version = "0.12.14", default-features = false, features = ["blocking", "json", "rustls-tls"] }
semver = { version = "1.0.26", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sha2 = "0.10.8"
swc_malloc = "1.2.5"
tar = "0.4.44"
tempfile = "3.18.0"
thiserror = "2.0.12"
toml = "0.8.20"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["fmt", "env-filter"] }
xz2 = "0.1.7"
zip = { version = "0.6.6", default-features = false, features = ["deflate"] }

[dev-dependencies]
assert_cmd = "2.0.16"
httpmock = "0.8.3"
predicates = "3.1.3"
serial_test = "3.2.0"
