[package]
name = "serde-feather-macros"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Proc-macro scaffold crate for serde-feather"
publish = false

[lib]
proc-macro = true

[dependencies]
proc-macro-crate = "3.3.0"
proc-macro2 = "1.0.94"
quote = "1.0.39"
syn = { version = "2.0.100", features = ["full", "visit"] }
heck = "0.5.0"
