[package]
name = "serde-feather"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Size-first serde integration scaffold with optional derive support"
publish = false

[features]
default = ["std"]
std = ["serde/std"]
derive = ["dep:serde-feather-macros"]

[dependencies]
serde = { version = "1.0.219", default-features = false }
serde-feather-macros = { version = "0.1.0", path = "../serde-feather-macros", optional = true }
