[package]
name = "serde-feather"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Size-first serde integration scaffold with optional derive support"
publish = false

[features]
default = ["std"]
std = ["serde/std"]
derive = ["dep:serde-feather-macros", "std"]

[dependencies]
serde = { version = "1.0.219", default-features = false }
serde-feather-macros = { version = "0.1.0", path = "../serde-feather-macros", optional = true }

[dev-dependencies]
serde_json = "1.0.145"
serde_test = "1.0.177"
trybuild = "1.0.114"
