[package]
name = "typia-macros"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Rust version of typia.io derive macros for typia"
homepage = "https://typia.io/"
readme = "README.md"
publish = false

[lib]
proc-macro = true

[dependencies]
heck = "0.5.0"
proc-macro-crate = "3.3.0"
proc-macro2 = "1.0.94"
quote = "1.0.39"
syn = { version = "2.0.100", features = ["full"] }
