[package]
name = "typia"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Type-safe JSON schema validation for Rust"
publish = false

[features]
default = ["derive"]
derive = ["dep:typia-macros"]

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.145"
serde_path_to_error = "0.1.17"
typia-macros = { version = "0.1.0", path = "../typia-macros", optional = true }

[dev-dependencies]
trybuild = "1.0.114"
