[package]
name = "typia"
version = "0.1.1"
edition = "2024"
license = "MIT"
description = "Type-safe JSON schema validation for Rust"
publish = false

[features]
default = ["derive"]
derive = ["dep:typia-macros"]

[dependencies]
base64 = "0.22.1"
chrono = { version = "0.4.42", default-features = false, features = ["std"] }
regex = "1.11.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.145"
serde_path_to_error = "0.1.17"
typia-macros = { version = "0.1.1", path = "../typia-macros", optional = true }
url = "2.5.7"
uuid = { version = "1.18.1", features = ["std"] }

[dev-dependencies]
trybuild = "1.0.114"
