[package]
name = "with-watch"
version = "0.1.3"
edition = "2021"
license = "MIT"
description = "Watch command inputs and rerun commands when they change"
readme = "README.md"
repository = "https://github.com/delinoio/oss"

[dependencies]
blake3 = "1.8.4"
clap = { version = "4.5.32", features = ["derive"] }
globset = "0.4.15"
notify = "8.1.0"
starbase_args = "0.1.9"
swc_malloc = "1.2.5"
thiserror = "2.0.12"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["fmt", "env-filter"] }
walkdir = "2.5.0"

[dev-dependencies]
assert_cmd = "2.0.16"
predicates = "3.1.3"
tempfile = "3.18.0"
