[package]
name = "devhud-probe"
version = "0.0.0"
edition = "2024"
rust-version = "1.90"
default-run = "devhud-probe"
license = "MIT"
publish = false
description = "Non-product Tauri CEF feasibility probe for DevHud"

[lib]
name = "devhud_probe"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "devhud-probe"
path = "src/main.rs"
required-features = ["desktop-cef"]

[build-dependencies]
tauri-build = { git = "https://github.com/tauri-apps/tauri", rev = "f49ebda2fdba5755456b0f049e32593ca0ea331a", features = ["codegen"] }

[dependencies]
serde = { version = "1", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "json"] }
url = "2"

[dev-dependencies]
serde_json = "1"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri = { git = "https://github.com/tauri-apps/tauri", rev = "f49ebda2fdba5755456b0f049e32593ca0ea331a", default-features = false, features = ["cef", "devtools", "tray-icon"], optional = true }
tauri-runtime-cef = { git = "https://github.com/tauri-apps/tauri", rev = "f49ebda2fdba5755456b0f049e32593ca0ea331a", default-features = false, features = ["sandbox"], optional = true }

[target.'cfg(any(target_os = "android", target_os = "ios"))'.dependencies]
tauri = { git = "https://github.com/tauri-apps/tauri", rev = "f49ebda2fdba5755456b0f049e32593ca0ea331a", default-features = false, features = ["wry"], optional = true }

[target.'cfg(target_os = "macos")'.dependencies]
auto-launch = { version = "=0.5.0", optional = true }
global-hotkey = { version = "=0.8.0", optional = true }

[features]
default = []
custom-protocol = ["tauri?/custom-protocol"]
desktop-cef = ["dep:tauri", "dep:tauri-runtime-cef"]
macos-gate = [
    "desktop-cef",
    "dep:auto-launch",
    "dep:global-hotkey",
]
mobile-system-webview = ["dep:tauri"]
